# TKI_analysis

./: CMakeLists.txt  GiBUU2pi.cpp  LinkDef.h  MINERvA_0pi.cpp  MINERvA_all.cpp  MINERvA_all_gibuu.cpp  MINERvA_pi0.cpp  MINERvA_pi_single_charged_gibuu.cpp  T2K.cpp  build_jobcard.cpp  microboone_TKI.cpp  microboone_pi0_gibuu.cpp  minerva_all_gibuu_plot.cpp  rawq2.cpp  rawq2_gibuu.cpp  rawtheta.cpp  t2k_stk_gibuu.cpp  ubsec.cxx
data/: microboone.flux
include/: MINERvA_tki_cut.h  NuWro2event.h  T2K_tki_cut.h  dochi2.h  expdata.h  plottools.hxx  tkievent.h  tkigeneral.h
src/: EvtTracker2event.cxx  MINERvA_tki_cut.cxx  NuWro2event.cxx  T2K_tki_cut.cxx  dochi2.cxx  expdata.cxx  plottools.cxx  tkievent.cxx  tkigeneral.cxx
